# live-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: alerts.yaml  cameras.yaml  default.yaml  production.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AlertList.tsx  EmotionChart.tsx  EmptyState.tsx  Header.tsx  Sidebar.tsx  StatsPanel.tsx  StatusBadge.tsx  VideoFeed.tsx
frontend/src/hooks/: useApi.ts  useTelemetry.ts
frontend/src/pages/: AlertRulesPage.tsx  AnalyticsPage.tsx  CamerasPage.tsx  DashboardPage.tsx  RecordingsPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
nginx/: nginx.conf
scripts/: benchmark.py  export_onnx.py
src/: main.py
src/alerts/: dispatcher.py  rule_engine.py
src/alerts/channels/: __init__.py  base.py  email.py  telegram.py
src/api/: __init__.py
src/api/middleware/: cors.py  metrics.py
src/api/routes/: alert_rules.py  analytics.py  cameras.py  config.py  health.py  inference.py  recordings.py  settings.py  streams.py  telemetry.py  zones.py
src/api/schemas/: detection.py
src/core/: __init__.py  config.py  dependencies.py  events.py  exceptions.py  logging.py
src/db/: __init__.py  engine.py  event_logger.py  session.py
src/db/models/: __init__.py  alert.py  analytics.py  camera.py  detection.py  zone.py
src/db/repositories/: __init__.py  detection_repo.py
src/detection/: emotion_recognizer.py  face_detector.py  mask_detector.py  model_registry.py  object_detector.py  onnx_detector.py  zone_detector.py
src/pipeline/: enhancement.py  processor.py  quality.py  result.py  temporal_filter.py
src/services/: analytics_aggregator.py
src/utils/: gpu.py  image.py  timer.py
src/video/: camera_manager.py  stream.py
tests/: conftest.py  test_alert_rules.py  test_cameras.py  test_health.py  test_recordings.py  test_settings.py
